--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="/css/brewsheet.css" rel="stylesheet">
+    <link href="css/brewsheet.css" rel="stylesheet">
 
-    
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -121,7 +121,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdn.rawgit.com/moment/moment/develop/moment.js"></script>
     <script src="https://rawgit.com/homebrewing/brauhausjs/master/dist/brauhaus.min.js"></script>
-    <script src='/js/app.js'></script>
+    <script src='js/app.js'></script>
   </body>
 
 </html>
